# DAG

./: CMakeLists.txt  LICENSE  README.md  cuda_kernel.cu  dag.h  data_container.h  executor.h  graph.h  graph_node.h  mini_batch.h  queue.h  test_dag.cpp  test_data.cu  test_graph.cpp
examples/: basic.cpp  pipeline.cpp
include/dag/: dag.h  executor.h  graph.h  node.h  thread_pool.h  value.h
tests/: test_executor.cpp
